Wed Mar 28 16:50:48 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * NEWS:

          Added note for new multicast async_send feature.

        * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
        * tools/modeling/features/org.opendds.modeling.site/site.xml:
        * tools/modeling/plugins/*/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.common/about.properties:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/*.gmfgen:

          Updated version numbers for upcoming release.

Mon Mar 26 17:00:04 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportReactorTask.cpp:
        * dds/DCPS/transport/multicast/MulticastSendStrategy.h:
        * dds/DCPS/transport/multicast/MulticastSendStrategy.cpp:

          Fix compile errors on platforms that have no ACE_HAS_AIO_CALLS.

Mon Mar 26 03:27:12 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Fixed a coverity error.

Sat Mar 24 17:05:08 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Fixed spurious errors from DataReaderImpl::get_handle_instance().

Fri Mar 23 22:47:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastSendStrategy.cpp:

          With the new async send feature, need to tell the framework the
          entire datagram was sent (unless there was an error).

        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.cpp:

          Fixed a warning on systems with 64-bit size_t.

        * README:

          Updated GCC versions used in testing.

Fri Mar 23 22:39:02 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportReactorTask.cpp:
        * dds/DCPS/transport/multicast/MulticastSendStrategy.cpp:

          Fixed Linux build errors.

Fri Mar 23 21:25:49 UTC 2012  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.h: