@@ -1,8 +1,8 @@
-This is OpenDDS version 3.0.1, released Wed Nov 16 20:51:22 UTC 2011.
+This is OpenDDS version 3.1, released Wed Mar 28 17:41:16 UTC 2012.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 3.0.1
+    OpenDDS VERSION: 3.1
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
