@@ -1,3 +1,7 @@
+Wed Mar 28 17:41:16 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * OpenDDS version 3.1 released.
+
 Wed Mar 28 16:50:48 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * NEWS:
